--- a/style.css
+++ b/style.css
@@ -94,6 +94,20 @@ input {
 }
 
 
+.card a {
+    text-decoration: none;
+    list-style-type: none;
+    color: rgb(255, 255, 255);
+    font-family: Nunito Sans;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 26px;
+    letter-spacing: 0px;
+    text-align: left;
+    margin-bottom: 16px;
+    margin-left: 24px;
+}
+
 @media screen and (max-width: 600px) {
     .container {
         width: 500px;
@@ -233,13 +247,14 @@ input {
         margin-right: auto;
         margin-left: auto;
     }
-    .search{
+
+    .search {
         width: 600px;
         height: 43px;
         margin-bottom: 80px;
     }
 
-    .cards{
+    .cards {
         display: flex;
         flex-wrap: wrap;
         margin-left: 50px;
@@ -248,18 +263,21 @@ input {
 
 /* Media query for screens with a minimum width of 1201 pixels */
 @media screen and (min-width: 1201px) {
-    .container{
+    .container {
         width: 100%;
     }
-    .search{
+
+    .search {
         width: 700px;
         height: 50px;
     }
-    .navbar{
+
+    .navbar {
         margin-right: 20px;
         margin-left: 20px;
     }
-    .cards{
+
+    .cards {
         margin-left: 50px;
     }
 }
